Issue 135: fixed text alignment in IE.

--- a/vulcan-web/source/main/docroot/css/standard.css
+++ b/vulcan-web/source/main/docroot/css/standard.css
@@ -142,6 +142,7 @@ a.issue {
 td.progress-bar {
 	padding: 0;
 	margin: 0;
+	text-align: left !important;
 }
 
 td.progress-bar div {
